<resources>
    <string name="app_name">bashkirov_opisanie</string>
    <string name="strelka">TextView</string>
    <string name="vector1">TODO</string>
    <string name="opisanie">Описание</string>
    <string name="save1">Сохранить</string>
    <string name="clear">Очистить</string>
    <string name="backtema">TODO</string>
    <string name="vector2">TODO</string>
    <string name="sohranit">Button</string>
    <string name="sohran">Сохранить</string>
    <string name="save2">Сохранить</string>
    <string name="ochistit">очистить</string>
    <string name="sohr">Сохранить</string>
    <string name="ochist">Очистить</string>
    <string name="polzov">Пользователь</string>
    <string name="proizvod">Производитель</string>
    <string name="opis">Описание</string>
    <string name="opisanie1">Описание</string>
    <string name="opisanie2">Описание</string>
    <string name="opisanie3">Описание</string>
    <string name="opisanie4">Описание</string>
    <string name="update">Обновить</string>
    <string name="statistics">Статистика</string>
    <string name="kod_reestrov">Коды рестартов</string>
    <string name="obmen_enternet">Обмен Enternet (байт)</string>
    <string name="prinyato_dannyx">Принято данных</string>
    <string name="peredano_dannyx">Передано данных</string>
    <string name="prinyato_golosa">Принято голоса</string>
    <string name="peredano_golosa">Передано голоса</string>
    <string name="obmen_po_wifi">Обмен по Wi-Fi (байт) v7</string>
    <string name="prinyato_dannyx1">Принято данных</string>
    <string name="prinyato_golosa1">Принято голоса</string>
    <string name="peredano_golosa1">Передано голоса</string>
    <string name="peredano_dannyx1">Передано данных</string>
    <string name="obnovlenie1">Обновить</string>
    <string name="buttonobnova">Обновить</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="back1">TODO</string>
    <string name="fon">TODO</string>
    <string name="ssid1">Имя сети (SSID)</string>
    <string name="password1">Пароль</string>
    <string name="razreshenie_podclucheniya">Разрешение подключения</string>
    <string name="sostoyanie1">Состояние</string>
    <string name="versiya">Версия</string>
    <string name="wi_fi_modul">Wi-Fi модуль</string>
    <string name="rejim_sta">Режим STA</string>
    <string name="podcluchenie">Подлкючение</string>
    <string name="ip_adres1">IP-адрес</string>
    <string name="maska_seti1">Маска сети</string>
    <string name="shluz_seti1">Шлюз сети</string>
    <string name="mac_adres1">MAC-адрес</string>
    <string name="rssi1">RSSI</string>
    <string name="knopka">кнопка</string>
    <string name="knopochka">Button</string>
    <string name="sobstvennye">Собственные</string>
    <string name="tip_soedineniya">Тип соединения</string>
    <string name="port_zvuka">Порт звука</string>
    <string name="login">Login</string>
    <string name="port_dannyx">Порт данных</string>
    <string name="parol">Пароль</string>
    <string name="shluz_seti2">Шлюз сети</string>
    <string name="dns_seti">DNS сети</string>
    <string name="pory_zvuka">Порт Звука</string>
    <string name="obnovit">Обновить</string>
    <string name="sostoyanie">Состояние</string>
    <string name="vnutrennyaya_set">Внутренняя сеть</string>
    <string name="rejum_sata">Режим SATA</string>
    <string name="ip_adres">IP-адрес</string>
    <string name="connect">Подключение</string>
    <string name="maska_seti">Маска сети</string>
    <string name="shluz_seti">Шлюз сети</string>
    <string name="mac_adres">MAC-адрес</string>
    <string name="rssi">RSSI</string>
    <string name="ssid">Имя сети (SSID)</string>
    <string name="password">Пароль</string>
    <string name="canal">Канал</string>
</resources>